# rust-more-asserts

./: Cargo.toml  README.md
src/: inner.rs  lib.rs
tests/: test.rs
